--- a/scroller.kv
+++ b/scroller.kv
@@ -15,14 +15,14 @@
 
 	Player:
 		id: _player
-		pos: 0.25 * self.parent.width, 15
+		pos: 100, 100
 
 	Obstical:
 		id: _obstical1
 		pos: self.parent.center_x - 5 , 15
 
 <Player>:
-    size: 25, 25 
+    size: 25, 25
     canvas:
     	Color:
     		rgba: 0, 0, 1, 1
